--- a/docs/Development.mdx
+++ b/docs/Development.mdx
@@ -4,19 +4,19 @@ import { Meta } from '@storybook/blocks';
 
 # Development Guide
 
-This guide will help you understand how to contribute to Officesdk  UI development.
+This guide will help you understand how to contribute to Officesdk UI development.
 
 ## Project Structure
 
 ```
 officesdk-ui/
-├── packages/
-│   ├── components/     # UI Components
-│   ├── theme/          # Theme System
-│   └── utils/          # Utility Functions
-├── docs/               # Documentation
-├── .storybook/         # Storybook Configuration
-└── package.json        # Root Configuration
+[EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI] packages/
+[EMOJI][EMOJI]   [EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI] components/     # UI Components
+[EMOJI][EMOJI]   [EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI] theme/          # Theme System
+[EMOJI][EMOJI]   [EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI] utils/          # Utility Functions
+[EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI] docs/               # Documentation
+[EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI] .storybook/         # Storybook Configuration
+[EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI] package.json        # Root Configuration
 ```
 
 ## Development Environment Setup
