--- a/docs/Introduction.mdx
+++ b/docs/Introduction.mdx
@@ -12,12 +12,12 @@ Officesdk SDK UI is a modern UI component library built with React and styled-co
 
 ## Features
 
-- 🎨 **Modern Design** - Clean and beautiful design style
-- 🔧 **TypeScript Support** - Full type definitions
-- 💅 **Flexible Styling** - Built with styled-components, easy to customize
-- 📦 **Tree Shaking** - Supports on-demand loading
-- 🎯 **Ready to Use** - Complete default configuration
-- 📖 **Well Documented** - Detailed component documentation and examples
+- [EMOJI][EMOJI][EMOJI][EMOJI] **Modern Design** - Clean and beautiful design style
+- [EMOJI][EMOJI][EMOJI][EMOJI] **TypeScript Support** - Full type definitions
+- [EMOJI][EMOJI][EMOJI][EMOJI] **Flexible Styling** - Built with styled-components, easy to customize
+- [EMOJI][EMOJI][EMOJI][EMOJI] **Tree Shaking** - Supports on-demand loading
+- [EMOJI][EMOJI][EMOJI][EMOJI] **Ready to Use** - Complete default configuration
+- [EMOJI][EMOJI][EMOJI][EMOJI] **Well Documented** - Detailed component documentation and examples
 
 ## Tech Stack
 
