fix(docs): replace emoji placeholders with proper tree structure
- Replace [EMOJI] placeholders with proper ASCII tree characters
- Improve readability of project structure documentation

--- a/docs/Development.mdx
+++ b/docs/Development.mdx
@@ -10,13 +10,13 @@ This guide will help you understand how to contribute to Officesdk UI developmen
 
 ```
 officesdk-ui/
-[EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI] packages/
-[EMOJI][EMOJI]   [EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI] components/     # UI Components
-[EMOJI][EMOJI]   [EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI] theme/          # Theme System
-[EMOJI][EMOJI]   [EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI] utils/          # Utility Functions
-[EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI] docs/               # Documentation
-[EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI] .storybook/         # Storybook Configuration
-[EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI][EMOJI] package.json        # Root Configuration
+packages/
+├── components/     # UI Components
+├── theme/          # Theme System
+├── utils/          # Utility Functions
+docs/               # Documentation
+.storybook/         # Storybook Configuration
+package.json        # Root Configuration
 ```
 
 ## Development Environment Setup
