--- a/docs/Introduction.mdx
+++ b/docs/Introduction.mdx
@@ -21,7 +21,7 @@ Officesdk SDK UI is a modern UI component library built with React and styled-co
 
 ## Tech Stack
 
-- React 18+
+- React 16.9+
 - TypeScript
 - styled-components
 - Storybook
@@ -31,13 +31,13 @@ Officesdk SDK UI is a modern UI component library built with React and styled-co
 ### Installation
 
 ```bash
-yarn add @officesdk/ui styled-components@^5.3.0
+yarn add @officesdk/ui
 ```
 
 Or using npm:
 
 ```bash
-npm install @officesdk/ui styled-components@^5.3.0
+npm install @officesdk/ui
 ```
 
 ### Usage
