chore: rename ui to design

--- a/docs/Development.mdx
+++ b/docs/Development.mdx
@@ -9,11 +9,12 @@ This guide will help you understand how to contribute to Officesdk UI developmen
 ## Project Structure
 
 ```
-officesdk-ui/
+officesdk-design/
 packages/
 ├── components/     # UI Components
 ├── theme/          # Theme System
 ├── utils/          # Utility Functions
+├── icons/          # Icons
 docs/               # Documentation
 .storybook/         # Storybook Configuration
 package.json        # Root Configuration
