--- a/docs/Release.mdx
+++ b/docs/Release.mdx
@@ -4,7 +4,7 @@ import { Meta } from '@storybook/blocks';
 
 # Release Process
 
-This document describes the release process for `@officesdk/ui`.
+This document describes the release process for `@officesdk/design`.
 
 ## Overview
 
@@ -55,9 +55,9 @@ yarn changeset
 
 # You will be prompted:
 # ? Which packages would you like to include?
-#    @officesdk/ui
+#    @officesdk/design
 
-# ? What kind of change is this for @officesdk/ui?
+# ? What kind of change is this for @officesdk/design?
 #    patch   (0.1.0  0.1.1) - Bug fixes
 #    minor   (0.1.0  0.2.0) - New features
 #    major   (0.1.0  1.0.0) - Breaking changes
@@ -249,8 +249,8 @@ yarn changeset pre exit
 
 ### After Release
 
-1. **Verify on NPM**: https://www.npmjs.com/package/@officesdk/ui
-2. **Check Storybook**: https://officesdk.github.io/ui
+1. **Verify on NPM**: https://www.npmjs.com/package/@officesdk/design
+2. **Check Storybook**: https://officesdk.github.io/officesdk-design
 3. **Monitor GitHub Issues**: Check for bug reports
 4. **Test in real project**: Install and test the new version
 
